# optimization-design-library

./: .gitignore  .gitmodules  README.org  build_cpp.py  constraints.py  function.py  math_helper.py  ocplab.py  optimizationconfiguration.py  optimizationproblem.py  optimizationsolver.py  problembuildhelper.py  qpelements.py  quadratic_optimizer_elements.py  requirements.txt  solvertemplate_osqp.cpp  solvertemplate_osqp.h  solvertemplate_qpoases.h  test_optimization_design_library.py  variables.py
.github/workflows/: unittest-ocps.yml  unittests-core.yml  unittests.yml
cpp/: optimizer_interface.h  quadraticoptimizer.h  sqpmethod.cpp  sqpmethod.h  test_case_importer.cpp  test_case_importer.h
cpp_test/: CMakeLists.txt  min_nlp_interface.cpp  min_nlp_interface.h  minnlptest.cpp
doc/: .gitignore  cpp-structure.org  design-documentation.org  quadratic_optimizer.org
helpers/: CMakeLists.txt  cpp_optimizer_helper.py  cpp_struct_definition.py  cpp_struct_functions.py  dense_expression_parser.py  discretize_model.py  export_op_formulation.py  initialize_cmake_project.py  math_helper.py  parser_common.py  path_manager.py  scalar_expression_parser.py  sparse_expression_parser.py  substitute_variables.py  testcase_exporter.py
ipopt_builder/: build_ipopt.py  ipopt-interface.cpp  ipopt_params.cpp  ipopt_params.h  problem_interface.cpp  problem_interface.h  problem_template.cpp  problem_template.h
min_nlp/: .gitignore  ocp_min_nlp.py
min_nlp_with_params/: .gitignore  ocp_min_nlp_with_params.py
min_nlp_with_params/cpp/unittest/: CMakeLists.txt  main.cpp  test_min_nlp_with_params.cpp
nlopt_builder/: README.org  build_nlopt.py  problem_formulation.cpp  problem_formulation.hpp  problem_interface.cpp  problem_interface.hpp
openmodelica_parser/: flat_om_model_importer.py  model_equations.py  model_parser.py  model_variables.py  optimization_problem_from_modelica_model.py  optimization_with_om_model_creator.py  parse_om_function_to_casadi.py  parse_to_casadi_function.py  read_model.py
pybind11_builder/: README.org  build_pybind11_module.py  pybind11_module_template.cpp
qpoases_builder/: build_qpoases.py  solvertemplate_qpoases.cpp  solvertemplate_qpoases.h
unittest/: test_build_ipopt.py  test_build_nlopt.py  test_build_pybind11_module.py  test_casadi.py  test_cpp_optimizer_helper.py  test_cpp_struct_definition.py  test_cpp_struct_functions.py  test_dense_expression_parser.py  test_flat_om_model_importer.py  test_functions.py  test_model_parser.py  test_model_variables.py  test_optimization_problem_from_modelica_model.py  test_optimization_with_om_model_creator.py  test_parse_om_function_to_casadi.py  test_parse_to_casadi_function.py  test_problembuildhelper.py  test_scalar_expression_parser.py  test_sparse_expression_parser.py  test_subsitute_variables.py  test_variables.py  unittesthelper.py
unittest/hs074_ipopt/: CMakeLists.txt  hs074_pybind11.cpp  hs074_test.cpp  main.cpp  test_pybind_hs074.py
unittest/hs074_nlopt/: .gitignore  CMakeLists.txt  test_hs074_nlopt.cpp
unittest/hs074_with_params_ipopt/: .gitignore  main.cpp
unittest/nlopt_example/: .gitignore  CMakeLists.txt  main.cpp  test_main.cpp  test_nlopt.cpp
unittest/test_problems/: hs074.py  hs074_with_params.py  nlopt_example.py
unittest/testcase_data/test_build_ipopt/: test_hs074.json  test_hs074_with_params.json
unittest/testcase_data/test_build_nlopt/: test_build_nlopt_constraints.txt  test_build_xopt_result.txt
unittest/testcase_data/test_cpp_optimizer_helper/: test_build_mappers.txt  test_build_operators.txt  test_build_osstreams.txt  test_substitude_optimization_variables.txt  test_substitude_optimization_variables_pparam_as_struct.txt
unittest/testcase_data/test_cpp_struct_definition/: test_cpp_struct_definition.txt  test_cpp_struct_definition2.txt  test_empty_variables.txt
unittest/testcase_data/test_cpp_struct_functions/: test_assign_vector_values_to_struct_entries.txt  test_compare_cpp_struct.txt  test_cpp_struct_osstream.txt
unittest/testcase_data/test_dense_expression_parser/: test_parse_dense_casadi_expression.txt  test_parse_dense_casadi_expression_one_dimensional.txt
unittest/testcase_data/test_scalar_expression_parser/: test_parse_scalar_casadi_expression.txt
unittest/testcase_data/test_sparse_expression_parser/: test_parse_sparse_casadi_expression.txt  test_parse_sparse_casadi_expression_E.txt  test_parse_sparse_casadi_expression_lower_triangular_shape.txt
unittest/testcase_data/test_subsitute_variables/: test_subsitute_variables.txt  test_substitute_variable_with_exp1.txt
unittest/testcase_data/test_variables/: test_block_by_name.txt  test_variables_by_names.txt
unittest/testdata/: PT1.txt  PT1v2.mo  om_flat_oscillator.txt  simple_oscillator.txt
